# syaz0

./: .gitignore  .gitmodules  README.md  appveyor.yml  cli.py  setup.cfg  setup.py
src/: CMakeLists.txt  main.cpp  yaz0.cpp  yaz0.h
src/common/: binary_reader.h  swap.h
test/: files.py  manualtest_sizes.py  test_benchmark_compress.py  test_benchmark_decompress.py  test_yaz0.py
